local normalize file

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,2 @@
 @import "./open-props.css";
-@import "https://unpkg.com/open-props/normalize.min.css";
-@import "https://unpkg.com/open-props/buttons.min.css";
+@import "./normalize.css";
