--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,37 +1,29 @@
-.hero-container .hero-wrapper {
-  max-width: unset;
-  padding: 0;
-}
+.hero.block {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  min-height: 75vh;
 
-.hero {
-  position: relative;
-  padding: 40px 24px;
-  min-height: 300px;
-}
+  .hero-media {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    picture {
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
 
-.hero h1 {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  color: var(--background-color);
-}
+    img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
 
-.hero picture {
-  position: absolute;
-  z-index: -1;
-  inset: 0;
-  object-fit: cover;
-  box-sizing: border-box;
-}
-
-.hero img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
-
-@media (width >= 900px) {
-  .hero {
-    padding: 40px 32px;
+  .hero-content {
+    padding-inline: var(--section-padding-inline);
   }
 }
