--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,11 +15,13 @@
   --content-max-width: 1600px;
   --section-padding-inline: 24px;
   --nav-height: 80px;
+  --hero-image-offset: 36%;
 }
 
 @media (min-width: 768px) {
   :root {
     --section-padding-inline: 80px;
+    --hero-image-offset: center;
   }
 }
 
