--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,13 +1,25 @@
 .hero.block {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-row: 1fr 1fr;
   align-items: center;
-  min-height: 75vh;
+
+  @media (min-width: 768px) {
+    grid-template-columns: 1fr 1fr;
+    min-height: 80vh;
+  }
 
   .hero-media {
     position: relative;
     width: 100%;
     height: 100%;
+    min-height: calc(100vw * .50);
+    order: 1;
+
+    @media (min-width: 768px) {
+      order: unset;
+      min-height: 0;
+    }
+
     picture {
       position: absolute;
       display: block;
@@ -17,6 +29,7 @@
 
     img {
         object-fit: cover;
+        object-position: center var(--hero-image-offset);
         width: 100%;
         height: 100%;
       }
@@ -24,6 +37,7 @@
   }
 
   .hero-content {
+    padding-block: 60px;
     padding-inline: var(--section-padding-inline);
   }
 }
