--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,13 +3,17 @@ header .nav-wrapper {
   width: 100%;
 
   pre {
-    font-size: 10px;
-    color: var(--purple-2);
-    -webkit-font-smoothing: subpixel-antialiased;
+    font-size: 9px;
+    -webkit-font-smoothing: antialiased;
   }
 }
 
 header nav {
+  --link: var(--indigo-3);
+  --link-visited: var(--purple-3);
+  --text-1: var(--gray-1);
+  --text-2: var(--gray-4);
+  --surface-1: var(--gray-9);
   box-sizing: border-box;
   display: grid;
   grid-template:
