--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,11 +1,20 @@
 .hero.block {
+  --link: var(--indigo-3);
+  --link-visited: var(--purple-3);
+  --text-1: var(--gray-1);
+  --text-2: var(--gray-4);
+  --surface-1: var(--gray-9);
   display: grid;
-  grid-template-row: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   align-items: center;
+  background-color: var(--surface-1);
+  color: var(--text-1);
 
   @media (min-width: 768px) {
     grid-template-columns: 1fr 1fr;
-    min-height: 80vh;
+    grid-template-rows: 1fr;
+    min-height: 60vh;
+    margin-bottom: var(--section-vertical-spacing);
   }
 
   .hero-media {
@@ -13,7 +22,6 @@
     width: 100%;
     height: 100%;
     min-height: calc(100vw * .55);
-    order: 1;
 
     @media (min-width: 768px) {
       order: unset;
