--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -8,14 +8,16 @@
     --surface-3: var(--gray-3);
     --surface-4: var(--gray-4);
     --scrollthumb-color: var(--gray-7);
+    --size-content-3: 100ch;
     -webkit-text-size-adjust: none;
     accent-color: var(--brand, var(--link));
-    background-color: var(--surface-1);
+    background-color: var(--surface-3);
     block-size: 100%;
     caret-color: var(--brand, var(--link));
     color: var(--text-1);
     color-scheme: light;
     font-family: var(--font-transitional);
+    font-size: var(--font-size-3);
     line-height: var(--font-lineheight-3);
     scrollbar-color: var(--scrollthumb-color) transparent;
 }
@@ -47,7 +49,7 @@
     :where(textarea, select, input:not([type='button'], [type='submit'], [type='reset'])) {
     background-color: var(--surface-2);
 }
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
     :where(html) {
         --link: var(--indigo-3);
         --link-visited: var(--purple-3);
@@ -62,7 +64,7 @@
         --shadow-color: 220 40% 2%;
         color-scheme: dark;
     }
-}
+} */
 :where(a[href]) {
     color: var(--brand, var(--link));
 }
@@ -111,28 +113,24 @@
     line-height: var(--font-lineheight-1);
 }
 :where(h1) {
-    font-size: var(--font-size-8);
+    font-size: var(--font-size-7);
     font-family: var(--font-monospace-slab-serif);
-    max-inline-size: var(--size-header-1);
 }
 :where(h2) {
-    font-size: var(--font-size-6);
-    max-inline-size: var(--size-header-2);
-}
-:where(h3) {
     font-size: var(--font-size-5);
 }
-:where(h4) {
+:where(h3) {
     font-size: var(--font-size-4);
 }
-:where(h5) {
+:where(h4) {
     font-size: var(--font-size-3);
 }
+:where(h5) {
+    font-size: var(--font-size-2);
+}
 :where(h3, h4, h5, h6, dt) {
-    max-inline-size: var(--size-header-3);
 }
 :where(p, ul, ol, dl, h6) {
-    font-size: var(--font-size-2);
 }
 :where(a, u, ins, abbr) {
     text-underline-offset: 1px;
@@ -242,7 +240,6 @@
 }
 :where(p) {
     text-wrap: pretty;
-    max-inline-size: var(--size-content-3);
 }
 :where(dt, summary) {
     font-weight: var(--font-weight-7);
