--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -9,7 +9,7 @@
 
 .cards > ul > li {
   border: 1px solid #dadada;
-  background-color: var(--background-color);
+  background-color: var(--surface-1);
 }
 
 .cards .cards-card-body {
