--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -1,5 +1,5 @@
 :where(html) {
-    --link: var(--indigo-7);
+    --link: var(--purple-7);
     --link-visited: var(--purple-7);
     --text-1: var(--gray-12);
     --text-2: var(--gray-7);
@@ -11,7 +11,7 @@
     --size-content-3: 100ch;
     -webkit-text-size-adjust: none;
     accent-color: var(--brand, var(--link));
-    background-color: var(--surface-3);
+    background-color: var(--surface-2);
     block-size: 100%;
     caret-color: var(--brand, var(--link));
     color: var(--text-1);
@@ -67,9 +67,6 @@
 } */
 :where(a[href]) {
     color: var(--brand, var(--link));
-}
-:where(a[href]):where(:visited) {
-    color: var(--link-visited);
 }
 :focus-visible {
     outline-color: var(--brand, var(--link));
@@ -150,9 +147,6 @@
 :where(a):where([href]) {
     text-decoration-color: var(--indigo-2);
 }
-:where(a):where([href]):where(:visited) {
-    text-decoration-color: var(--purple-2);
-}
 :where(a):where(:not(:hover)) {
     text-decoration: inherit;
 }
@@ -228,15 +222,6 @@
 :where(mark) {
     border-radius: var(--radius-2);
     padding-inline: var(--size-1);
-}
-:where(ol, ul) {
-    padding-inline-start: var(--size-8);
-}
-:where(li) {
-    padding-inline-start: var(--size-2);
-}
-:where(li, dd, figcaption) {
-    max-inline-size: var(--size-content-2);
 }
 :where(p) {
     text-wrap: pretty;
