--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,37 +1,49 @@
-.hero-container .hero-wrapper {
-  max-width: unset;
-  padding: 0;
-}
+.hero.block {
+  --link: var(--indigo-3);
+  --text-1: var(--gray-2);
+  --surface-1: var(--gray-9);
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  align-items: center;
+  background-color: var(--surface-1);
+  color: var(--text-1);
 
-.hero {
-  position: relative;
-  padding: 40px 24px;
-  min-height: 300px;
-}
+  @media (min-width: 768px) {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    min-height: 60vh;
+    margin-bottom: var(--section-vertical-spacing);
+  }
 
-.hero h1 {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  color: var(--background-color);
-}
+  .hero-media {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    min-height: calc(100vw * .55);
 
-.hero picture {
-  position: absolute;
-  z-index: -1;
-  inset: 0;
-  object-fit: cover;
-  box-sizing: border-box;
-}
+    @media (min-width: 768px) {
+      order: unset;
+      min-height: 0;
+    }
 
-.hero img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
+    picture {
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
 
-@media (width >= 900px) {
-  .hero {
-    padding: 40px 32px;
+    img {
+        object-fit: cover;
+        object-position: center var(--hero-image-offset);
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+
+  .hero-content {
+    padding-block: 60px;
+    padding-inline: var(--section-padding-inline);
   }
 }
