--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -222,6 +222,7 @@ header nav .nav-sections ul > li > ul > li {
     display: flex;
     gap: 24px;
     margin: 0;
+    justify-content: end;
   }
 
   header nav .nav-sections .default-content-wrapper > ul > li {
