--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,15 +6,21 @@ footer {
 footer .footer > div {
   margin: auto;
   max-width: 1200px;
-  padding: 40px 24px 24px;
+  padding: 0 0 40px;
+  .spotify-embed {
+    padding-inline: var(--section-padding-inline);
+  }
 }
 
 footer .footer p {
   margin: 0;
 }
 
-@media (width >= 900px) {
+@media (width >= 1024px) {
   footer .footer > div {
-    padding: 40px 32px 24px;
+    .spotify-embed {
+      padding-inline: calc(var(--section-padding-inline)* 2);
+    }
+    padding: 0;
   }
 }
