fix linting errors

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,7 +32,7 @@ body {
   line-height: var(--base-line-height);
   font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizelegibility;
 }
 
 img, picture, video, canvas, svg {
